# cot-dashboard

./: .dockerignore  .gitignore  PLAN.md  PLAN_v1_archived.md  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-news-ingest.yml  friday-cftc-ingest.yml
apps/api/: Dockerfile
apps/api/src/: __init__.py  article.py  chat.py  data.py  main.py  schemas.py
apps/web/: package-lock.json  package.json  svelte.config.js  vercel.json  vite.config.ts
apps/web/src/: app.html
apps/web/src/lib/api/: client.ts  types.ts
apps/web/src/lib/design/: tokens.css
apps/web/src/lib/engine/: scheduler.ts
apps/web/src/lib/state/: newsReader.svelte.ts  universe.svelte.ts
apps/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/src/routes/alerts/: +page.svelte
apps/web/src/routes/chat/: +page.svelte
apps/web/src/routes/compare/: +page.svelte
apps/web/src/routes/correlation/: +page.svelte
docs/superpowers/plans/: 2026-05-17-market-intelligence-phase-a-backend.md  2026-05-18-intelligence-page.md  2026-05-18-phase1-chat-analyst.md  2026-05-18-phase2-extremes-scanner.md  2026-05-18-phase3-analogues.md  2026-05-18-phase4-alerts.md  2026-05-18-phase5-seasonality.md  2026-05-18-phase6-compare.md  2026-05-18-phase7-correlation.md  2026-05-18-phase8-export.md
docs/superpowers/specs/: 2026-05-17-market-intelligence-expansion-design.md  2026-05-18-intelligence-page-design.md
infra/: README.md
infra/fly/: fly.toml
research/: findings.md
research/notebooks/: phase0_strategy_validation.ipynb
research/twitter/: thread-1-cot-strategy-decay.md  thread-2-news-correlator.md  thread-3-launch.md
tests/: conftest.py
tests/ingest/: test_context_builder.py  test_intelligence.py  test_market_synthesis.py  test_news_sentiment.py  test_regime.py  test_retail_sentiment.py  test_tff_cot.py  test_universe.py  test_zones_extended.py
(+19 files in other folders)
