[project]
name = "cot-dashboard"
version = "0.0.1"
description = "Phase 0 — WILLIAMS_COT_SWING_v1 strategy validation"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "requests>=2.31",
    "yfinance>=0.2.40",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "trafilatura>=2.0",
    "brotli>=1.1",
    "openai>=1.30",
    "huggingface_hub>=0.23",
    "hmmlearn>=0.3",
    "scikit-learn>=1.4",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
